code/tui/src/app/snapshots/app__usage_tests__usage_reauthentication.snap
---
source: code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                        [— / —] [Dashboard]

        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Reconnect ChatGPT in /config > Providers.                   │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│                                                              │──────
  > Buil│  Esc to close                                                │
  ──────└──────────────────────────────────────────────────────────────┘model
