code/tui/src/app/snapshots/app__usage_tests__usage_signed_out.snap
---
source: code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                        [— / —] [Dashboard]

        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Sign in to ChatGPT, Kimi or xAI: /config > Providers.       │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│                                                              │──────
  > Buil│  Esc to close                                                │
  ──────└──────────────────────────────────────────────────────────────┘model
