code/tui/src/app/snapshots/app__usage_tests__usage_subscriptions.snap
---
source: code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                        [— / —] [Dashboard]


        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │   ChatGPT    xAI                                             │
        │                                                              │
        │> xAI plan  ·  Not reported                                   │
        │  Access  ·  Unavailable                                      │
        │  Credits used  ·  105.125%                                   │
        │  Period  ·  Not reported                                     │
        │  Resets  ·  Not reported                                     │
        │  Prepaid  ·  Not reported                                    │
        │  On-demand used  ·  Not reported                             │
        │  On-demand cap  ·  Not reported                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│  Tab/Shift+Tab to switch · Esc to close                      │──────
  > Buil└──────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────── Automatic model
